--- a/Sports_Equipments WebApp/templates/base.html
+++ b/Sports_Equipments WebApp/templates/base.html
@@ -95,16 +95,16 @@
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
             <h6 class="text-uppercase mb-4 font-weight-bold">Equipments</h6>
             <p>
-              <a class="text-white">Cricket</a>
+              <a style="text-decoration: none" class="text-white">Cricket</a>
             </p>
             <p>
-              <a class="text-white">Football</a>
+              <a style="text-decoration: none" class="text-white">Football</a>
             </p>
             <p>
-              <a class="text-white">Volleyball</a>
+              <a style="text-decoration: none" class="text-white">Volleyball</a>
             </p>
             <p>
-              <a class="text-white">Badminton</a>
+              <a style="text-decoration: none" class="text-white">Badminton</a>
             </p>
           </div>
           <!-- Grid column -->
