--- a/Sports_Equipments WebApp/static/css/styles.css
+++ b/Sports_Equipments WebApp/static/css/styles.css
@@ -21,7 +21,7 @@
   --color-grey-5: #2a2e35;
   --color-grey-6: #12181b;
   --br-sm-2: 14px;
-  --box-shadow-1: 0 5px 15px rgba(0,0,0,.3);
+  --box-shadow-1: 0 5px 15px rgba(0, 0, 0, .3);
 }
 
 .light-mode {
@@ -44,6 +44,55 @@ body {
   font-size: 1.1rem;
   color: var(--color-white);
   overflow-x: hidden;
+}
+
+nav {
+  background-color: var(--color-black);
+  color: var(--color-white);
+}
+nav .dropdown-menu {
+  background-color: var(--color-grey-5);
+}
+nav .dropdown-menu li .dropdown-item {
+  color: var(--color-white);
+}
+nav .dropdown-menu li :hover {
+  background-color: var(--color-grey-4);
+}
+nav form .search-input {
+  margin-right: 1rem;
+  margin-left: 1rem;
+  box-shadow: var(--box-shadow-1);
+  font-family: "Courier New", Courier, monospace;
+}
+nav form .search-btn {
+  color: var(--color-white);
+  background-color: var(--color-secondary);
+  box-shadow: var(--box-shadow-1);
+  margin: 0;
+}
+
+.logout {
+  width: 7rem;
+  height: 3rem;
+  border-radius: 10%;
+  margin: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  background-color: var(--color-grey-2);
+  box-shadow: var(--box-shadow-1);
+}
+.logout a {
+  justify-content: center;
+  align-items: center;
+  text-decoration-line: none;
+  font-size: 1.5rem;
+  color: var(--color-black);
+}
+.logout:hover {
+  transform: scale(1.05);
 }
 
 .footer-controls {
