--- a/Sports_Equipments WebApp/static/css/styles.scss
+++ b/Sports_Equipments WebApp/static/css/styles.scss
@@ -1,12 +1,12 @@
-*{
-    margin : 0;
+* {
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     list-style: none;
     user-select: none;
 }
 
-:root{
+:root {
     --color-primary: #191d2b;
     --color-secondary: #27AE60;
     --color-white: #FFFFFF;
@@ -19,7 +19,7 @@
     --color-grey-5: #2a2e35;
     --color-grey-6: #12181b;
     --br-sm-2: 14px;
-    --box-shadow-1: 0 5px 15px rgba(0,0,0,.3);
+    --box-shadow-1: 0 5px 15px rgba(0, 0, 0, .3);
 }
 
 .light-mode {
@@ -36,7 +36,7 @@
     --color-grey-6: #12181b;
 }
 
-body{
+body {
     background-color: var(--color-primary);
     font-family: 'Poppins', sans-serif;
     font-size: 1.1rem;
@@ -44,7 +44,60 @@ body{
     overflow-x: hidden;
 }
 
-.footer-controls{
+nav{
+    background-color: var(--color-black);
+    color: var(--color-white);
+    .dropdown-menu {
+        background-color: var(--color-grey-5);
+        li {
+            .dropdown-item {
+                color: var(--color-white);
+            }:hover {
+                background-color: var(--color-grey-4);
+            }
+        }
+    }
+    form {
+        .search-input {
+            margin-right: 1rem;
+            margin-left: 1rem;
+            box-shadow: var(--box-shadow-1);
+            font-family: 'Courier New', Courier, monospace;
+        }
+        .search-btn {
+            color: var(--color-white);
+            background-color: var(--color-secondary);
+            box-shadow: var(--box-shadow-1);
+            margin: 0;
+        }
+    }
+}
+
+.logout {
+    width: 7rem;
+    height: 3rem;
+    border-radius: 10%;
+    margin: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    background-color: var(--color-grey-2);
+    box-shadow: var(--box-shadow-1); 
+    a {
+        justify-content: center;
+        align-items: center;
+        text-decoration-line: none;
+        font-size: 1.5rem;
+        color: var(--color-black);
+    }
+
+    &:hover {
+        transform: scale(1.05);
+    }
+}
+
+.footer-controls {
     padding-top: 5vh;
     padding-bottom: 0.5vh;
     padding-left: 5vw;
@@ -54,35 +107,42 @@ body{
     display: grid;
     grid-template-columns: 0.7fr 0.5fr 1fr 0.8fr;
     gap: 3rem;
-    .footer-controls-items{
+
+    .footer-controls-items {
         padding: 1rem;
-        h4{
+
+        h4 {
             text-transform: capitalize;
             font-size: x-large;
             padding-bottom: 1rem;
         }
-        p{
+
+        p {
             margin: 0;
             line-height: 1.8rem;
         }
-        .info-item{
+
+        .info-item {
             display: grid;
             grid-template-columns: 1fr 10fr;
             gap: 0.5rem;
-            i{
+
+            i {
                 display: flex;
                 align-items: center;
             }
         }
     }
-    .contact-icons{
+
+    .contact-icons {
         .contact-icon {
             margin: 1rem 0;
             display: flex;
             text-align: center;
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
-            a{
+
+            a {
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -98,20 +158,22 @@ body{
                 cursor: pointer;
                 text-decoration: none;
                 transition: 0.4s ease-in-out;
-                i{
+
+                i {
                     display: flex;
                     align-items: center;
                     justify-content: center;
                     font-size: 1.5rem;
                 }
-                &:hover{
+
+                &:hover {
                     background-color: var(--color-secondary);
                     color: var(--color-black);
                 }
             }
         }
     }
-    
+
 }
 
 .footer-copyright {
@@ -123,13 +185,15 @@ body{
     background-color: var(--color-grey-5);
     box-shadow: var(--box-shadow-1);
     font-weight: 900;
+
     a {
         color: var(--color-white);
     }
-    &:hover{
+
+    &:hover {
         background-color: var(--color-secondary);
         color: var(--color-black);
         cursor: pointer;
         outline: none;
-    }               
+    }
 }
