--- a/Sports_Equipments WebApp/templates/contactus.html
+++ b/Sports_Equipments WebApp/templates/contactus.html
@@ -5,7 +5,7 @@
 <div class="container-fluid px-0">
     <img src="/static/img/cus1.jpg" class="d-block w-100 mx-0" alt="">
 </div>
-<div class="container mb-3 py-4">
+<div>
     <h2 class="text-center"> Contact Us</h2>
     <form method = "post" action = "/contactus">
         {% csrf_token %}
