--- a/Sports_Equipments WebApp/templates/base.html
+++ b/Sports_Equipments WebApp/templates/base.html
@@ -13,7 +13,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">RohanSports</a>
+      <a class="navbar-brand mx-4" href="#">RohanSports</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
