--- a/Sports_Equipments WebApp/static/css/styles.scss
+++ b/Sports_Equipments WebApp/static/css/styles.scss
@@ -182,7 +182,6 @@ nav {
             }
         }
     }
-
 }
 
 .footer-copyright {
@@ -264,7 +263,6 @@ nav {
                     background-color: var(--color-secondary);
                     border: none;
                     padding: 0.5rem;
-                    border-radius: 15%;
 
                     a {
                         text-decoration: none;
@@ -273,6 +271,140 @@ nav {
 
                     &:hover {
                         background-color: var(--color-black);
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+// about.html
+
+.aboutus-top {
+    background-color: var(--color-grey-3);
+}
+
+.aboutus-mid {
+    background-color: var(--color-grey-5);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    i {
+        color: var(--color-secondary);
+        font-size: 8rem;
+    }
+    p {
+        color: var(--color-grey-3);
+    }
+    .mid-upper-img {
+        box-shadow: var(--box-shadow-1);
+    }
+    .mid-lower-img {
+        box-shadow: var(--box-shadow-1);
+    }
+    .btn-container {
+        display: flex;
+        align-self: flex-start;
+        margin: 2rem 0 0 0;
+        width: 50vw;
+    }
+    .main-btn{
+        border-radius: 30px;
+        color: var(--color-black);
+        font-weight: 600;
+        position: relative;
+        background-color: var(--color-grey-1);
+        border: 1px solid var(--color-secondary);
+        display: flex;
+        align-self: flex-start;
+        align-items: center;
+        overflow: hidden;
+        padding: 0.6rem 1rem 0.6rem 1rem;
+        text-decoration-line: none;
+    }
+    .main-btn::before{
+        content: '';
+        z-index: -1;
+        transform: translateX(100%);
+    }
+    .main-btn:hover{
+        background-color: var(--color-secondary);
+        transform: translateX(0);
+    }
+}
+
+.about-items-bottom {
+    .bottom {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        .bottom-head {
+            color: var(--color-white);
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        }
+
+        .bottom-desc {
+            color: var(--color-grey-2);
+        }
+    }
+
+    .about-items {
+        .about-item {
+            padding: 1rem;
+
+            .about-card {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+                font-family: Verdana, Geneva, Tahoma, sans-serif;
+                background-color: var(--color-grey-4);
+                margin: 1rem 0;
+
+                img {
+                    border: 1px solid var(--color-secondary);
+                }
+
+                ul {
+                    display: grid;
+                    grid-template-columns: 1fr 1fr 1fr 1fr;
+                    column-gap: 0;
+                    width: 60%;
+
+                    li {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        margin: 0;
+                        width: 70%;
+
+                        a {
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            margin: 0.2rem;
+                            padding: 0.5rem;
+                            text-align: center;
+                            color: var(--color-white);
+                            background-color: var(--color-grey-5);
+                            border-radius: 50%;
+                            width: 1.7rem;
+                            height: 1.7rem;
+                            box-shadow: var(--box-shadow-1);
+                            cursor: pointer;
+                            text-decoration: none;
+                            transition: 0.4s ease-in-out;
+
+                            i {
+                                font-size: 0.8rem;
+                            }
+
+                            &:hover {
+                                background-color: var(--color-secondary);
+                                color: var(--color-black);
+                            }
+                        }
                     }
                 }
             }
