--- a/Sports_Equipments WebApp/templates/index.html
+++ b/Sports_Equipments WebApp/templates/index.html
@@ -14,7 +14,7 @@
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
         aria-label="Slide 3"></button>
     </div>
-    <div class="carousel-inner m-5">
+    <div class="carousel-inner m-5 rounded">
       <div class="carousel-item active">
         <img src="/static/img/vk.webp" class="d-block w-100" alt="...">
       </div>
@@ -42,7 +42,7 @@
       <div class="card-body">
         <h5 class="card-title">Cricket</h5>
         <p class="card-text">All the products of cricket are available here..</p>
-        <button>
+        <button class="rounded">
           <a href="/services">Cricket</a>
         </button>
       </div>
@@ -53,7 +53,7 @@
       <div class="card-body">
         <h5 class="card-title">Football</h5>
         <p class="card-text">All the products of football are available here..</p>
-        <button>
+        <button class="rounded">
           <a href="/services">Football</a>
         </button>
       </div>
@@ -66,7 +66,7 @@
       <div class="card-body">
         <h5 class="card-title">Volleyball</h5>
         <p class="card-text">All the products of Volleyball are available here..</p>
-        <button>
+        <button class="rounded">
           <a href="/services">Volleyball</a>
         </button>
       </div>
@@ -77,7 +77,7 @@
       <div class="card-body">
         <h5 class="card-title">Badminton</h5>
         <p class="card-text">All the products of Badminton are available here..</p>
-        <button>
+        <button class="rounded">
           <a href="/services">Badminton</a>
         </button>
       </div>
