--- a/Sports_Equipments WebApp/templates/contactus.html
+++ b/Sports_Equipments WebApp/templates/contactus.html
@@ -2,29 +2,37 @@
 
 {% block title %}Contact Us{% endblock title %}
 {% block body %}
+
+{% comment %} <link rel="stylesheet" href="../static/css/styles.css"> {% endcomment %}
+{% load static %}
+<link rel="stylesheet" href="{% static '../static/css/styles.css' %}">
+
 <div class="container-fluid px-0">
     <img src="/static/img/cus1.jpg" class="d-block w-100 mx-0" alt="">
 </div>
-<div>
-    <h2 class="text-center"> Contact Us</h2>
-    <form method = "post" action = "/contactus">
-        {% csrf_token %}
-        <div class="mb-3">
-            <label for="Name" class="form-label">Name</label>
-            <input type="name" class="form-control" id="name" name = "name" placeholder = "Enter your name" aria-describedby="emailHelp">
-            <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" name = "email" aria-describedby="emailHelp">
-            </div>
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" name = "password">
-            </div>
-            <div class="mb-3">
-                <label for="phonenumber" class="form-label">Phone number</label>
-                <input type="PhoneNumber" class="form-control" id="Phone Number" name = "phonenumber" placeholder = "Enter your number" aria-describedby="emailHelp">
 
-            <button type="submit" class="btn btn-primary mb-3">Submit</button>
+<div class="contactus">
+    <h2 class="text-center">Contact Us</h2>
+    <form class="form-control" method="post" action="/contactus">
+        {% csrf_token %}
+            <div class="input-control">
+                <input type="name" id="name" name="name" placeholder="YOUR NAME"
+                aria-describedby="emailHelp" required>
+            </div>
+            <div class="input-control">
+                <input type="email" id="exampleInputEmail1" name="email" placeholder="EMAIL"
+                aria-describedby="emailHelp" required>
+            </div>
+            <div class="input-control">            
+                <input type="password" id="exampleInputPassword1" name="password" placeholder="PASSWORD" required>
+            </div>
+            <div class="input-control">            
+                <input type="PhoneNumber" id="Phone Number" name="phonenumber"
+                    placeholder="CONTACT NO." aria-describedby="emailHelp" required>
+            </div>
+            <div class="buttons">
+                <input type="button" value="SUBMIT">
+            </div>
     </form>
 </div>
 {% endblock body %}
