--- a/Sports_Equipments WebApp/templates/about.html
+++ b/Sports_Equipments WebApp/templates/about.html
@@ -5,7 +5,7 @@
 
 <link rel="stylesheet" href="../static/css/styles.css">
 
-<div class="aboutus-top">
+<div class="aboutus-top mt-5">
   <div class="container py-5">
     <div class="row h-100 align-items-center py-5">
       <div class="col-lg-5 p-5">
@@ -87,7 +87,7 @@
         <div class="rounded py-5 px-4 about-card">
           <img src="https://bootstrapious.com/i/snippets/sn-about/avatar-4.png" alt="" width="100"
             class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-          <h5 class="mb-0">Alia Advani</h5>
+          <h5 class="mb-0">Nik Shah</h5>
           <span class="small text-uppercase text-muted">CEO</span>
           <ul class="social mb-0 list-inline mt-3">
             <li class="list-inline-item"><a href="https://www.facebook.com" class="social-link"><i
@@ -105,7 +105,7 @@
         <div class="rounded py-5 px-4 about-card">
           <img src="https://bootstrapious.com/i/snippets/sn-about/avatar-2.png" alt="" width="100"
             class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-          <h5 class="mb-0">Ronank Patel</h5><span class="small text-uppercase text-muted">Developer</span>
+          <h5 class="mb-0">Mihir Paija</h5><span class="small text-uppercase text-muted">Developer</span>
           <ul class="social mb-0 list-inline mt-3">
             <li class="list-inline-item"><a href="https://www.facebook.com" class="social-link"><i
                   class="fa fa-facebook-f"></i></a></li>
@@ -122,7 +122,7 @@
         <div class="rounded py-5 px-4 about-card">
           <img src="https://bootstrapious.com/i/snippets/sn-about/avatar-1.png" alt="" width="100"
             class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-          <h5 class="mb-0">Johnathan</h5><span class="small text-uppercase text-muted">Marketing Consultant</span>
+          <h5 class="mb-0">Dhruv Shah</h5><span class="small text-uppercase text-muted">Marketing Consultant</span>
           <ul class="social mb-0 list-inline mt-3">
             <li class="list-inline-item"><a href="https://www.facebook.com" class="social-link"><i
                   class="fa fa-facebook-f"></i></a></li>
