--- a/Sports_Equipments WebApp/templates/base.html
+++ b/Sports_Equipments WebApp/templates/base.html
@@ -8,11 +8,17 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/d61201e24d.js" crossorigin="anonymous"></script>
-</head>
 
-<body>
-  <nav class="navbar navbar-expand-lg navbar-dark">
+  {% load static %}
+  <link rel="stylesheet" href="{% static '../static/css/styles.css' %}">
+  </head>
+    
+    <body>
+  <nav class="navbar navbar-expand-lg navbar-dark w-100 position-fixed">
     <div class="container-fluid">
+      <div class="theme-btn" id="theme-btn">
+        <i class="fa-solid fa-gear"></i>
+      </div>
       <a class="navbar-brand mx-4" href="#">RohanSports</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,10 +49,9 @@
             <a class="nav-link" href="/contactus">Contact Us</a>
           </li>
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control search-input" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn search-btn" type="submit">Search</button>
-        </form>
+        <div class="d-flex mx-4">
+          <a class="btn search-btn fs-5" type="submit" href="/logout">LogOut</a>
+        </div>
       </div>
     </div>
   </nav>
@@ -74,11 +79,6 @@
     integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
     crossorigin="anonymous"></script>
   {% comment %} Welcome {request user} {% endcomment %}
-  <div class="logout" class="btn btn-info">
-    <a href="/logout">
-      LogOut
-    </a>
-  </div>
 
   
   <!-- Remove the container if you want to extend the Footer to full width. -->
@@ -170,6 +170,8 @@
   <!-- Footer -->
 
   <!-- End of .container -->
+  {% load static %}
+  <script src="{% static '../static/changeTheme.js' %}"></script>
 </body>
 
 </html>
