--- a/Sports_Equipments WebApp/templates/index.html
+++ b/Sports_Equipments WebApp/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block body %}
 <link rel="stylesheet" href="../static/css/styles.css">
-<div class="container-fluid mb-3">
+<div class="container-fluid mb-3 mt-5">
   <div id="carouselExampleCaptions" class="carousel slide">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
