--- a/Sports_Equipments WebApp/static/css/styles.scss
+++ b/Sports_Equipments WebApp/static/css/styles.scss
@@ -30,6 +30,43 @@ body {
     overflow-x: hidden;
 }
 
+// login.html
+
+.login {
+    background-color: var(--color-grey-4);
+    color: var(--color-white);
+
+    input {
+        font-family: 'Trebuchet MS', sans-serif;
+        color: var(--color-grey-6);
+        border-radius: 5px;
+
+        &:focus {
+            box-shadow: var(--box-shadow-1);
+            border: 1px solid var(--color-secondary);
+        }
+    }
+
+    button {
+        background-color: var(--color-secondary);
+        color: var(--color-grey-2);
+        width: 80%;
+        font-size: 1.2rem;
+        border-radius: 10px;
+        resize: none;
+        transition: 0.3s ease-in-out;
+        box-shadow: var(--box-shadow-1);
+        color: var(--color-grey-5);
+
+        &:hover {
+            background-color: var(--color-secondary);
+            color: var(--color-black);
+            cursor: pointer;
+            outline: none;
+        }
+    }
+}
+
 // base.html
 
 nav {
@@ -407,8 +444,9 @@ nav {
 
 .services-body {
     background-color: var(--color-grey-4);
+
     .services-items {
-            .card {
+        .card {
             position: relative;
             width: 95%;
             border-radius: 5px;
@@ -444,7 +482,7 @@ nav {
                 p {
                     color: var(--color-grey-3);
                 }
-                
+
                 .btn-group {
                     color: var(--color-white);
                     text-transform: capitalize;
