--- a/Sports_Equipments WebApp/templates/login.html
+++ b/Sports_Equipments WebApp/templates/login.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+    {% load static %}
+    <link rel="stylesheet" href="{% static '../static/css/styles.css' %}">
 
     <style>
         html,
@@ -34,10 +36,6 @@
             margin: auto;
         }
 
-        .form-signin .checkbox {
-            font-weight: 400;
-        }
-
         .form-signin .form-control {
             margin: 16px 3px;
             position: relative;
@@ -45,10 +43,6 @@
             height: auto;
             padding: 10px;
             font-size: 16px;
-        }
-
-        .form-signin .form-control:focus {
-            z-index: 2;
         }
 
         .form-signin input[type="email"] {
@@ -79,17 +73,15 @@
         }
     </style>
     <!-- Custom styles for this template -->
-    <link href="signin.css" rel="stylesheet">
 </head>
 
-<body class="text-center">
+<body class="text-center login">
     <form class="form-signin" method="post" action="/login">
         {% csrf_token %}
-        <img class="mb-4" src="\static\img\logo.png" alt="" width="200" height="200">
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <!-- <img class="mb-4" src="\static\img\logo.png" alt="" width="200" height="200"> -->
+        <h1 class="h3 mb-3 font-weight-bold">Please Sign In</h1>
         <label for="inputEmail" class="sr-only">Username</label>
-        <input type="text" id="inputEmail" name="username" class="form-control" placeholder="Username" required
-            autofocus>
+        <input type="text" id="inputEmail" name="username" class="form-control" placeholder="Username" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
         <div class="checkbox mb-3">
@@ -97,8 +89,7 @@
                 <input type="checkbox" value="remember-me"> Remember me
             </label>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        <p class="mt-5 mb-3 text-muted">&copy; 2017-2019</p>
+        <button class="btn font-weight-bold" type="submit">SIGNIN</button>
     </form>
 </body>
 
